--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
          <div id="contact">
             <h2>Contact</h2>
             <div id="contact-form">
-               <form method="POST" action="https://formspree.io/viveku004@gmail.com">
+               <form action="https://formspree.io/f/viveku004@gmail.com" method="post">
                   <input type="hidden" name="_subject" value="Contact request from personal website">
                   <input type="email" name="_replyto" placeholder="Email" required>
                   <textarea name="message" placeholder="Your message" required></textarea>
