--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-4" data-aos="fade-right">
-                  <h2 class="heading">About Me</h2>
+                  <h2 class="heading">/h2>
                </div>
                <div class="col-md-8">
                   <div data-aos="fade-left">
