--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
          <div class="container">
             <div class="row">
                <div class="col-md-4" data-aos="fade-right">
-                  <h2 class="heading">/h2>
+                  <h2 class="heading">About Me</h2>
                </div>
                <div class="col-md-8">
                   <div data-aos="fade-left">
                      <script>
                         AOS.init();
                      </script>
-                     <p>
+
+                     </div>
                   </div>
                </div>
             </div>
