--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
          <div id="contact">
             <h2>Contact</h2>
             <div id="contact-form">
-               <form action="https://formspree.io/f/viveku004@gmail.com" method="post">
+             <form action="https://formspree.io/f/mjvpppan" method="POST">
                   <input type="hidden" name="_subject" value="Contact request from personal website">
                   <input type="email" name="_replyto" placeholder="Email" required>
                   <textarea name="message" placeholder="Your message" required></textarea>
