--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                <div id="lead-content">
                    <h1>Vivek Upadhyay</h1>
                    <h2>Aspiring Software Engineer</h2>
-                   <a href="#" class="btn-rounded-white">ERROR 404</a>
+                   <a href="#" class="btn-rounded-white">Resume</a>
                </div>
                <!-- End #lead-content -->
 
