--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="#about" class="#about btn-rounded-white about">About</a>
             <a href="#education" class="#education btn-rounded-white education">Education</a>
             <a href="#experience" class="#experience btn-rounded-white ExtraC">Extra-Curriculars</a>
+            <img src="images\Webp.net-resizeimage__1_-removebg-preview.png" data-aos="zoom-in">
             <a href="#skills" class="#contact btn-rounded-white skills">Skills</a>
             <a href="#projects" class="#projects btn-rounded-white projects">Projects</a>
             <a href="#contact" class="#contact btn-rounded-white contact">Contact</a>
