--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <script src="js/scripts.min.js"></script>
       <meta charset="utf-8">
+
+      <link rel="shortcut icon" href="images\Webp.net-resizeimage__1_-removebg-preview.ico" type="image/x-icon">
+	     <link rel="icon" href="images\Webp.net-resizeimage__1_-removebg-preview.ico" type="image/x-icon">
+
+
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="shortcut icon" href="images\favicon.ico" type="images\favicon.ico">
-      <link rel="icon" href="images\favicon.ico" type="images\favicon.ico">
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
       <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +30,6 @@
 
       <div class="blurred-wrapper">
          <header class="main-headevr container">
-            <a href="index.html" class="logo">Personal Portfolio</a>
             <a href="#about" class="#about btn-rounded-white about">About</a>
             <a href="#education" class="#education btn-rounded-white education">Education</a>
             <a href="#experience" class="#experience btn-rounded-white ExtraC">Extra-Curriculars</a>
@@ -36,7 +38,6 @@
             <a href="#projects" class="#projects btn-rounded-white projects">Projects</a>
             <a href="#contact" class="#contact btn-rounded-white contact">Contact</a>
          </header>
-
          <div id="lead">
                <div id="lead-content">
                    <h1>Vivek Upadhyay</h1>
