--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link rel="stylesheet" href="main.css">
+  
+	   <link rel="shortcut icon" href="images\trial logo.jpg" type="image/x-icon">
+	     <link rel="icon" href="images\trial logo.jpg" type="image/x-icon">
    </head>
    <body>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
