--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          <div id="lead">
                <div id="lead-content">
                    <h1>Vivek Upadhyay</h1>
-                   <h2>Aspiring Software Engineer</h2>
+                   <h2>Aspiring Cyber Security Engineer</h2>
                    <a href="#" class="btn-rounded-white">Resume</a>
                </div>
                <!-- End #lead-content -->
