--- a/index.html
+++ b/index.html
@@ -73,6 +73,115 @@
             </div>
          </div>
       </div>
+  
+<footer>
+         <div id="experience" class="background-alt">
+            <h2 class="heading" <div data-aos="zoom-in">Experience</h2>
+            <div data-aos="zoom-in">
+               <div id="experience-timeline">
+                  <div data-date="September 2018 – June 2022">
+                     <h3>Robotics</h3>
+                     <h4>Team-Captin/Programmer</h4>
+                     <p>
+                       - Cordinated team of highschools students to design, build and code robot.
+                     </p>
+                     <p>
+                       - Programmed robots through the use of PID and 2D Motion Profiling.
+                      </p>
+                      <p>
+                        - Strategized collaboratively with a team of 4 to complete tasks at hand.
+                      </p>
+                      <br>
+                     <p>
+                       <u><b>Achievements</b></u>
+                      </p>
+                        <p>- x3 Tournament Champion</p>
+                        <p>- x2 Skils Champion</p>
+                        <p>- x2 Provincial Champion</p>
+                        <p>- x1 World Division Finalist</p>
+
+                  </div>
+                  <div data-date="March 2021 – June 2022">
+                     <h3>Financial Literacy Club</h3>
+                     <h4>Co-Founder</h4>
+                     <p>
+                        - Mentored upwards of 90 students on improving financial literacy
+                     </p>
+                     <p>
+                        - Thought students the fundamentals of the stock market and investing.
+                     </p>
+                     <p>
+                        - Provided students resources to budget for the future.
+                     </p>
+                     <p>
+                        - Hosted an inter-club competition using the TMX Simulator
+                     </p>
+                  </div>
+                  <div data-date="December 2020 – June 2022">
+                     <h3>Model UN</h3>
+                     <h4>General Member</h4>
+                     <p>
+                        - Competed in inter-club mock-trials.
+                     </p>
+                     <p>
+                        - Worked collaboratively alongside a team to debate.
+                     </p>
+                     <p>
+                        - Created position papers to prepare for conferences.
+                     </p>
+                  </div>
+                  <div data-date="September 2018 – June 2022">
+                     <h3>Vex Robotcs Competition Volunteer</h3>
+                     <h4>Skills Referee / Finals Referee</h4>
+                     <p>
+                        - Officiated upwards of 150 Vex offical matches.
+                     </p>
+                     <p>
+                        - Ensured the safety of the competitors.
+                     </p>
+                     <p>
+                        - Contributed in organizing events.
+                     </p>
+                     <p>
+                        - Actively participated in decisions made in finals matches.
+                     </p>
+
+                  </div>
+                  <div data-date="September 2018 – June 2022">
+                     <h3>Brampton Library Springdale Branch Tech-Fair</h3>
+                     <h4>Instructor</h4>
+                     <p>
+                      - Supervised activities.
+                     </p>
+                     <p>
+                      - Demonstrated to students the importance of S.T.E.M.
+                     </p>
+                     <p>
+                      - Thought students the design process of engineering.
+                     </p>
+                     <p>
+                      - Contucted activities and ensured the safety of the students.
+                     </p>
+                  </div>
+                  </div>
+               </div>
+             </div>
+
+         <div id="skills">
+            <h2 class="heading" <div data-aos="zoom-in">Skills</h2>
+            <ul>
+
+                  <li  <div data-aos="zoom-in" >JavaScript</li>
+                  <li <div data-aos="zoom-in">Python</li>
+                  <li <div data-aos="zoom-in">Java</li>
+                  <li <div data-aos="zoom-in">C++</li>
+                  <li <div data-aos="zoom-in">VEX Pros</li>
+                  <li <div data-aos="zoom-in">HTML</li>
+                  <li <div data-aos="zoom-in">CSS</li>
+                  <li <div data-aos="zoom-in">Autodesk Inventor</li>
+               </div>
+            </ul>
+         </div>
 
 
 
