--- a/index.html
+++ b/index.html
@@ -75,7 +75,14 @@
       </div>
   
 <footer>
-	
+	 <div id="" class="background-alt">
+           <h2 class="heading" <div data-aos="zoom-in">Projects</h2>
+           <div class="container">
+               <div class="row" >
+                   <div class="project shadow-large" data-aos="zoom-in">
+                       <div class="project-image" data-aos="zoom-in">
+                           <img src="projects\images\pygame.png" data-aos="zoom-in">
+                       </div>
          <div id="skills">
             <h2 class="heading" <div data-aos="zoom-in">Skills</h2>
             <ul>
