--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
   
 <footer>
-	 
+	 <div id="skills">
             <h2 class="heading" <div data-aos="zoom-in">Skills</h2>
             <ul>
                   <li  <div data-aos="zoom-in" >JavaScript</li>
