--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                <div id="experience-timeline">
                   <div data-date="September 2018 – June 2022">
                      <h3>Robotics</h3>
-                     <h4>Team-Captin/Programmer</h4>
+                     <h4>Team-Captain/Programmer</h4>
                      <p>
                        - Cordinated team of highschools students to design, build and code robot.
                      </p>
