--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <div id="lead-content">
                    <h1>Vivek Upadhyay</h1>
                    <h2>Aspiring Cyber Security Engineer</h2>
-                   <a href="#" class="btn-rounded-white">Resume</a>
+                   <a href="https://resume.io/r/ExU7BryN7" class="btn-rounded-white">Resume</a>
                </div>
                <!-- End #lead-content -->
 
