--- a/index.html
+++ b/index.html
@@ -74,21 +74,44 @@
          </div>
       </div>
   
-
-	 <div id="skills">
-            <h2 class="heading" <div data-aos="zoom-in">Skills</h2>
-            <ul>
-                  <li  <div data-aos="zoom-in" >JavaScript</li>
-                  <li <div data-aos="zoom-in">Python</li>
-                  <li <div data-aos="zoom-in">Java</li>
-                  <li <div data-aos="zoom-in">C++</li>
-                  <li <div data-aos="zoom-in">VEX Pros</li>
-                  <li <div data-aos="zoom-in">HTML</li>
-                  <li <div data-aos="zoom-in">CSS</li>
-                  <li <div data-aos="zoom-in">Autodesk Inventor</li>
+<div id="about">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-4" data-aos="fade-right">
+                  <h2 class="heading">About Me </h2>
+                  <br>
+                  <img src="vivek.jpg" alt="Vivek Upadhyay width="250" height="300">
                </div>
-            </ul>
+               <div class="col-md-8">
+                  <div data-aos="fade-left">
+                     <script>
+                        AOS.init();
+                     </script>
+                     <h3>
+                        <p>
+                        I am a S.T.E.M. Enthusiast with a great passion for technology, and working in the stem field is a passion of mine. Hence I strive to increase the outreach of stem. I am a programmer for the VEX team Discobots 1104V. I can fluently program in python, can 3D-model using Inventor, and am a part-time web developer.
+                        </p>
+                        <div id="skills">
+                           <h2 class="heading" <div data-aos="zoom-in">Skills</h2>
+                           <ul>
+                                 <li  <div data-aos="zoom-in" >JavaScript</li>
+                                 <li <div data-aos="zoom-in">Python</li>
+                                 <li <div data-aos="zoom-in">Java</li>
+                                 <li <div data-aos="zoom-in">C++</li>
+                                 <li <div data-aos="zoom-in">VEX Pros</li>
+                                 <li <div data-aos="zoom-in">HTML</li>
+                                 <li <div data-aos="zoom-in">CSS</li>
+                                 <li <div data-aos="zoom-in">Autodesk Inventor</li>
+                              </div>
+                           </ul>
+                        </div>
+                     </h3>
+                     </div>
+                  </div>
+               </div>
+            </div>
          </div>
+      </div>
 
          <div id="experience" class="background-alt">
             <h2 class="heading" <div data-aos="zoom-in">Experience</h2>
