--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
       <div class="blurred-wrapper">
          <header class="main-headevr container">
             <a href="#about" class="#about btn-rounded-white about">About</a>
-            <a href="#education" class="#education btn-rounded-white education">Education</a>
             <a href="#experience" class="#experience btn-rounded-white ExtraC">Experience</a>
             <img src="images\Webp.net-resizeimage__1_-removebg-preview.png" data-aos="zoom-in">
             <a href="#skills" class="#contact btn-rounded-white skills">Skills</a>
-            <a href="#projects" class="#projects btn-rounded-white projects">Projects</a>
             <a href="#contact" class="#contact btn-rounded-white contact">Contact</a>
          </header>
          <div id="lead">
@@ -117,8 +115,8 @@
             <h2 class="heading" <div data-aos="zoom-in">Experience</h2>
             <div data-aos="zoom-in">
                <div id="experience-timeline">
-                  <div data-date="September 2018 – June 2022">
-                     <h3>Robotics</h3>
+                  <div data-date="September 2018 – Present">
+                     <h3>Brampton Robotics</h3>
                      <h4>Team-Captain/Programmer</h4>
                      <p>
                        - Cordinated team of highschools students to design, build and code robot.
@@ -139,7 +137,33 @@
                         <p>- x1 World Division Finalist</p>
 
                   </div>
-                  <div data-date="March 2021 – June 2022">
+                  <div data-date="July 2021 – August 2021">
+                     <h3>Code For Fun (CFF)</h3>
+                     <h4>Programming Instructional Asistant (Intern)</h4>
+                     <p>
+                        - Worked alongside children aged 7-17 to teach programming fundamentals
+                     </p>
+                     <p>
+                        - Taught, Python, Java, MIT APP development & Modding with minecraft.
+                     </p>
+                     <p>
+                        - Asisted in the development of tasks taught to children.
+                     </p>
+                  </div> 
+                  <div data-date="Febuary 2021 – Present">
+                     <h3>Site 4 U</h3>
+                     <h4>Head Mobile UI/UX Developer</h4>
+                     <p>
+                        - Collaborate with development and product teams utilizing agile process and procedures 
+                     </p>
+                     <p>
+                        - Created innovative design concepts doused on a deep understanding of the business and users needs
+                     </p>
+                     <p>
+                        - Used and contributed to style guides and other design documentations. 
+                     </p>
+                  </div>
+                  <div data-date="January 2021 – Present">
                      <h3>Financial Literacy Club</h3>
                      <h4>Co-Founder</h4>
                      <p>
@@ -155,20 +179,8 @@
                         - Hosted an inter-club competition using the TMX Simulator
                      </p>
                   </div>
-                  <div data-date="December 2020 – June 2022">
-                     <h3>Model UN</h3>
-                     <h4>General Member</h4>
-                     <p>
-                        - Competed in inter-club mock-trials.
-                     </p>
-                     <p>
-                        - Worked collaboratively alongside a team to debate.
-                     </p>
-                     <p>
-                        - Created position papers to prepare for conferences.
-                     </p>
-                  </div>
-                  <div data-date="September 2018 – June 2022">
+
+                  <div data-date="September 2018 – Present">
                      <h3>Vex Robotcs Competition Volunteer</h3>
                      <h4>Skills Referee / Finals Referee</h4>
                      <p>
